# miki-miki

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai_learning.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  website_support.md
.github/workflows/: ci.yml
