[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "miki-miki"
dynamic = ["version"]
description = "AI-powered browser automation tool using Google's Gemini Vision AI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Flash Dynamics Syndicate", email = "info@fdsyd.com"}
]
maintainers = [
    {name = "Flash Dynamics Syndicate", email = "info@fdsyd.com"}
]
keywords = [
    "ai",
    "automation", 
    "browser",
    "gemini",
    "selenium",
    "web-scraping",
    "artificial-intelligence",
    "machine-learning",
    "vision",
    "google-ai"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.15.2",
    "Pillow>=10.0.1",
    "requests>=2.31.0",
    "google-generativeai>=0.8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/29ayx/miki-miki"
Documentation = "https://github.com/29ayx/miki-miki#readme"
Repository = "https://github.com/29ayx/miki-miki"
"Bug Tracker" = "https://github.com/29ayx/miki-miki/issues"
Website = "https://fdsyd.com"

[project.scripts]
miki-miki = "main:main"

[tool.setuptools]
packages = ["miki_miki"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.png", "*.md"]

[tool.setuptools_scm]
write_to = "miki_miki/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
